--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,11 @@
     <!-- Main menu -->
     <string name="action_sort_by_most_popular">Sort by most popular</string>
     <string name="action_sort_by_highest_rated">Sort by highest rated</string>
+
+    <!-- Network -->
+    <string name="no_internet_connection">No Internet connection.</string>
+    <string name="error_fetch_movies_data">Problem with fetching movies. Try again later.</string>
+
+    <!-- Movies view -->
+    <string name="poster_image_description">Poster</string>
 </resources>
