--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,8 @@
 
     <!-- Movies view -->
     <string name="poster_image_description">Poster</string>
+
+    <!-- Movie details view -->
+    <string name="move_detail_activity_label">Movie Detail</string>
+    <string name="vote_average">%.2f/10</string>
 </resources>
