--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,9 @@
     <!-- Network -->
     <string name="no_internet_connection">No Internet connection.</string>
     <string name="error_fetch_movies_data">Problem with fetching movies. Try again later.</string>
+    <string name="error_fetch_movies_message">
+        An error has occurred. Please try again later.
+    </string>
 
     <!-- Movies view -->
     <string name="poster_image_description">Poster</string>
