feat: Open and play trailer in YouTube app or browser

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,7 @@
     <string name="trailers_fetching_error">
         Problem with getting trailers. Please try again later.
     </string>
+    <string name="trailer_play_error">
+        Problem with playing trailer. Please try again later.
+    </string>
 </resources>
