--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,8 @@
     <string name="vote_average">%.2f/10</string>
     <string name="unknown_release_date">Date unknown</string>
     <string name="play_image_description">Play</string>
+
+    <!-- Trailers -->
     <string name="trailers_list_label">Trailers:</string>
     <string name="trailers_fetching_error">
         Problem with getting trailers. Please try again later.
@@ -27,4 +29,11 @@
     <string name="trailer_play_error">
         Problem with playing trailer. Please try again later.
     </string>
+
+    <!-- Reviews -->
+    <string name="reviews_list_label">Reviews:</string>
+    <string name="reviews_fetching_error">
+        Problem with getting reviews. Please try again later.
+    </string>
+
 </resources>
