feat: add getting and displaying favorite movies stored in database

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,9 @@
         Problem with opening review. Please try again later.
     </string>
 
+    <!-- Favorites -->
+    <string name="favorite_movies_no_favorite_movies_in_db_message">
+        You don\'t have favorite movies.
+    </string>
+
 </resources>
