--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,5 +44,9 @@
     <string name="favorite_movies_no_favorite_movies_in_db_message">
         You don\'t have favorite movies.
     </string>
+    <string name="movie_added_to_favorites_message">Movie added to favorites.</string>
+    <string name="movie_removed_from_favorites_message">Movie removed from favorites.</string>
+    <string name="add_to_favorites_button">Add to favorites</string>
+    <string name="remove_from_favorites_button">Remove from favorites</string>
 
 </resources>
